src/App.scss
html {
  color: aquamarine;
  background-color: black;
  font-weight: 600;
}

h1,
body {
  margin: 0;
}

.App {
  padding: 50px;

  &__main {
    margin-bottom: 50px;
  }

  &__title {
    margin-bottom: 20px;
  }

  &__selected-list {
    display: inline;
    font-size: 24px;
    margin-right: 20px;
  }

  &__goods-list {
    list-style: none;
    margin: 0;
    padding: 0;
  }

  &__goods-item {
    gap: 20px;
    padding: 0;
    font-size: 16px;

    display: grid;
    grid-template-columns: repeat(3, 1fr);
    width: 300px;
    align-items: center;

    &::before {
      content: "🤷‍♀️";
    }
  }

  &__item {
    text-align: center;
    padding: 8px 0;
    background-color: transparent;
    max-width: 100px;

    transition: background-color, color 0.3 ease;

    &--selected {
      background-color: aquamarine;
      border-radius: 10px;
      color: black;
    }
  }
}


/* CSS */
.button-23 {
  background-color: aquamarine;
  border: 1px solid #222222;
  border-radius: 10px;
  box-sizing: border-box;
  color: #222222;
  cursor: pointer;
  display: inline-block;
  font-family: Circular,-apple-system,BlinkMacSystemFont,Roboto,"Helvetica Neue",sans-serif;
  font-size: 16px;
  font-weight: 600;
  line-height: 10px;
  margin: 0;
  outline: none;
  padding: 13px 13px;
  position: relative;
  text-align: center;
  text-decoration: none;
  touch-action: manipulation;
  transition: box-shadow .2s,-ms-transform .1s,-webkit-transform .1s,transform .1s;
  user-select: none;
  -webkit-user-select: none;
  width: auto;
}

.button-23:focus-visible {
  box-shadow: #222222 0 0 0 2px, rgba(255, 255, 255, 0.8) 0 0 0 4px;
  transition: box-shadow .2s;
}

